# dkmn

./: .gitignore  Cargo.toml  README.md  justfile
dkmn/: Cargo.toml
dkmn/src/: error.rs  main.rs  prelude.rs
dkmn/src/commands/: mod.rs
dkmnd/: Cargo.toml
dkmnd/src/: main.rs
